# etamil_compiler

./: .gitignore  BEFORE_AFTER_COMPARISON.md  GITHUB_PUBLISHING_GUIDE.md  MARKETPLACE_PUBLICATION_GUIDE.md  QUICK_PUBLISH_GUIDE.md  README.md  README_PUBLICATION_STATUS.md  TAMIL_EQUIVALENTS_INTEGRATION_SUMMARY.md  WINDOWS_BUILD_COMPLETE.md  WINDOWS_BUILD_SUMMARY.md  WINDOWS_INSTALLATION.md  build_output.txt  eTamil - Literature Review v3.docx  etamil  etamil.bat  install.sh  install_windows.bat  test_http_backend.sh  test_standalone.etamil  test_string.qmz  test_temp.etamil  test_vm_executor.sh  test_windows.bat
.github/: copilot-instructions.md
docs/: INDEX.md  REORGANIZATION_SUMMARY.md
docs/architecture/: DSL.md  OVERVIEW.md  VM_IMPLEMENTATION_SUMMARY.md  VM_INDEX.md
docs/archive/: BOOK_PROJECT_COMPLETION.md  BOOK_PROJECT_SUMMARY.md  CHAPTER_1_COMPLETE.md  CHAPTER_1_REVIEW.md  COMPILER_DATABASE_CONNECTIVITY_IMPLEMENTATION.md  COMPILER_REST_API_IMPLEMENTATION.md  CROSS_PLATFORM_COMPATIBILITY.md  CURRENT_VS_REQUIRED.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXTENSION_PUBLICATION_SUMMARY.md  FINAL_VALIDATION.txt  IMPLEMENTATION_COMPLETE_SUMMARY.txt  IMPLEMENTATION_NAVIGATION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LLVM_IR_EXAMPLE.txt  PROJECT_COMPLETION_MANIFEST.md  REFACTORING_COMPLETE.txt  REFACTORING_SUMMARY.md  STANDALONE_BUILD_SUMMARY.md  STANDALONE_COMPLETION_REPORT.md  TAMIL_DOCUMENTATION_CORRECTION_COMPLETE.md  TESTING_AND_DOCUMENTATION_UPDATE.md  TEST_EXECUTION_REPORT_JAN26.md  TEST_RESULTS.md  VSCODE_CHANGELOG.md  VSCODE_CORRECTIONS_FINAL_REPORT.md  VSCODE_DOCUMENTATION_CORRECTIONS.md  VSCODE_DOCUMENTATION_INDEX.md  WEEK_1_3_INTEGRATION_SUMMARY.md
docs/backend/: BACKEND_ANALYSIS.md  BACKEND_CHECKLIST.md  BACKEND_IMPLEMENTATION.md  BACKEND_REQUIREMENTS.md  DATABASE_COMMANDS_GUIDE.md  DEPLOYMENT_GUIDE.md  HTTP_SERVER_IMPLEMENTATION.md  HTTP_SERVER_QUICKREF.md  PRODUCTION_HARDENING_GUIDE.md
docs/getting-started/: INSTALLATION.md  INSTALLATION_GUIDE.md  INSTALL_README.md  (+3 more)
eTamil_Code/: .eslintrc.json  .gitignore  CHANGELOG.md  EXTENSION_UPDATES.md  IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  README.md  TAMIL_LETTER_EQUIVALENTS.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
etamil_compiler/: Cargo.toml  DATABASE_AND_EXAMPLES_COMPLETION_REPORT.md  DATA_FILES_GUIDE.md  TAMIL_LETTER_EQUIVALENTS.md  build_output.txt  run.sh  test_all_examples.sh
etamil_compiler/examples/: README_EXAMPLES.md  README_TEST_FILES.md
etamil_compiler/examples/api/: README.md  simple_api.qmz
etamil_compiler/examples/backend/: calculator_server.qmz  hello_server.qmz  loop_server.qmz  simple_api.qmz  status_server.qmz  user_server.qmz
etamil_compiler/examples/basic_samples/: README.md  example.qmz
etamil_compiler/examples/crypto_samples/: crypto_demo.rs
etamil_compiler/examples/db_samples/: inventory_system.qmz  multi_db_test.qmz  payroll_system.qmz  student_management.qmz  students.json  test_db_connectivity.qmz
etamil_compiler/examples/io_samples/: fileio_example.qmz  input.txt  sample.txt
etamil_compiler/src/: codegen.rs  commands.rs  lexer.rs  lib.rs  main.rs  parser.rs
etamil_compiler/src/api/: codegen.rs  mod.rs  parser.rs
etamil_compiler/src/db/: mod.rs  nosql.rs  relational.rs
etamil_compiler/src/fileio/: crypto.rs  csv_handler.rs  mod.rs
etamil_compiler/src/http/: async_handler.rs  async_mod.rs  auth.rs  cache.rs  errors.rs  handler.rs  logging.rs  mod.rs  monitoring.rs  request.rs  resilience.rs  response.rs  router.rs
etamil_compiler/src/vm/: interpreter.rs  mod.rs  value.rs
etamil_compiler/src/vm/bytecode/: compiler.rs  mod.rs
scopus/: List-of-570-Indian-Journals-Indexed-in-Scopus-Database.docx
tests/: load_test_async.sh  test_basic.etamil  test_cross_platform.bat  test_cross_platform.sh  test_fileio.sh  test_installation.sh
(+42 files in other folders)
